--- a/carF4.ioc
+++ b/carF4.ioc
@@ -23,7 +23,7 @@ Dma.UART5_RX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.UART5_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.UART5_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
@@ -44,35 +44,35 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PE9
-Mcu.Pin17=PE11
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
+Mcu.Pin10=PE9
+Mcu.Pin11=PE11
+Mcu.Pin12=PE13
+Mcu.Pin13=PE14
+Mcu.Pin14=PD9
+Mcu.Pin15=PD10
+Mcu.Pin16=PD12
+Mcu.Pin17=PD13
+Mcu.Pin18=PC6
+Mcu.Pin19=PC7
 Mcu.Pin2=PC0
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PC10
-Mcu.Pin27=PC11
-Mcu.Pin28=PC12
-Mcu.Pin29=PD2
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PD2
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PC1
 Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin4=PC2
-Mcu.Pin5=PC3
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
 Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -104,20 +104,20 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=encoder_30
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=encoder_31
-PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=lf_1
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=lf_2
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=encoder_00
+PC0.GPIO_Label=lb_1
 PC0.Locked=true
 PC0.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=encoder_01
+PC1.GPIO_Label=lb_2
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC10.Mode=Asynchronous
@@ -126,31 +126,31 @@ PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=encoder_10
-PC2.Locked=true
-PC2.Signal=GPIO_Output
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=encoder_11
-PC3.Locked=true
-PC3.Signal=GPIO_Output
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=encoder_20
-PC4.Locked=true
-PC4.Signal=GPIO_Output
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=encoder_21
-PC5.Locked=true
-PC5.Signal=GPIO_Output
 PC6.Signal=S_TIM8_CH1
 PC7.Signal=S_TIM8_CH2
 PC8.Signal=S_TIM3_CH3
 PC9.Signal=S_TIM3_CH4
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=rf_2
+PD10.Locked=true
+PD10.Signal=GPIO_Output
 PD12.Signal=S_TIM4_CH1
 PD13.Signal=S_TIM4_CH2
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=rf_1
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE11.Signal=S_TIM1_CH2
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=rb_1
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=rb_2
+PE14.Locked=true
+PE14.Signal=GPIO_Output
 PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -184,7 +184,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_UART5_Init-UART5-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_UART5_Init-UART5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=75000000
 RCC.AHBFreq_Value=37500000
 RCC.APB1Freq_Value=37500000
